--- a/res/xml/media_notification.xml
+++ b/res/xml/media_notification.xml
@@ -17,6 +17,19 @@
     android:key="media_notification"
     android:title="@string/artwork_media_title">
 
+    <com.miku.settings.preferences.SystemSettingSwitchPreference
+        android:key="reticker_status"
+        android:icon="@drawable/ic_message_fast"
+        android:title="@string/reticker_title"
+        android:summary="@string/reticker_summary" />
+
+    <com.miku.settings.preferences.SystemSettingSwitchPreference
+        android:key="reticker_colored"
+        android:icon="@drawable/ic_message_fast"
+        android:title="@string/reticker_colored_title"
+        android:summary="@string/reticker_colored_summary"
+        android:dependency="reticker_status" />
+
         <!-- Statusbar Lyric -->
         <com.miku.settings.preferences.SecureSettingSwitchPreference
             android:key="status_bar_show_lyric"
